Fix body style overflow

--- a/src/style.css
+++ b/src/style.css
@@ -24,8 +24,7 @@ body {
 
 .header {
   display: var(--display-flex);
-  width: 100vw;
-  padding: 20px;
+  width: 100%;
   margin-bottom: 100px;
 }
 
